install instructions download instructions new project structure

--- a/4.0_arbitrary_style_transfer.ipynb
+++ b/4.0_arbitrary_style_transfer.ipynb
@@ -17,7 +17,7 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -329,7 +329,7 @@
     "        if relu:\n",
     "            return tf.nn.relu(tf.nn.bias_add(conv, b), name=layer_name)\n",
     "        else:\n",
-    "            return tf.nn.bias_add(conv, b, name=layer_name)        "
+    "            return tf.nn.bias_add(conv, b, name=layer_name)"
    ]
   },
   {
@@ -496,8 +496,7 @@
     "        G_style = _gram_matrix_tf(style_encoder_VGG[layer_name], B, N, M) # works on Numpy array\n",
     "        G = _gram_matrix_tf(vgg_style_loss[layer_name],B, N, M) # works on Tensor \n",
     "        \n",
-    "        style_loss += weight * tf.reduce_mean(tf.pow(G - G_style, 2))\n",
-    "        "
+    "        style_loss += weight * tf.reduce_mean(tf.pow(G - G_style, 2))"
    ]
   },
   {
@@ -603,7 +602,7 @@
     "                                     vertical_flip=True).flow_from_directory(DATA_DIR_CONTENT,\n",
     "                                                         target_size=(IMG_W, IMG_H),\n",
     "                                                         batch_size=BATCH_SIZE,\n",
-    "                                                         class_mode=None)\n"
+    "                                                         class_mode=None)"
    ]
   },
   {
@@ -668,7 +667,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -683,5 +682,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
