--- a/0.1_VGG_construction.ipynb
+++ b/0.1_VGG_construction.ipynb
@@ -256,7 +256,7 @@
     "    \n",
     "    red, green, blue = tf.split(axis=3, num_or_size_splits=3, value=prev_layer)\n",
     "    bgr = tf.concat(axis=3, values=[blue - VGG_MEAN[0], green - VGG_MEAN[1], red - VGG_MEAN[2],])\n",
-    "    return bgr\n"
+    "    return bgr"
    ]
   },
   {
@@ -601,7 +601,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
@@ -665,7 +667,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
@@ -696,7 +700,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -708,7 +714,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -723,5 +729,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 0
 }
