new runs for notebooks

--- a/4.0_arbitrary_style_transfer.ipynb
+++ b/4.0_arbitrary_style_transfer.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -17,7 +15,7 @@
       ]
      },
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -27,11 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -44,27 +40,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "import utils\n",
-    "from vgg.imagenet_classes import class_names\n",
-    "from vgg.VGG import generate_VGG16"
+    "from VGG import generate_VGG16"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -82,19 +71,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "###############################################################################\n",
-    "# Constants for the image input and output.\n",
-    "###############################################################################\n",
-    "\n",
-    "\n",
     "LOGS = 'logs/4.0'\n",
     "# Output folder for the images.\n",
     "OUTPUT_DIR = 'output/'\n",
@@ -108,19 +90,17 @@
     "IMG_H = 256\n",
     "CHANNELS = 3\n",
     "\n",
-    "MODEL_WEIGHTS = 'vgg/vgg16.npy'\n",
+    "MODEL_WEIGHTS = 'data/VGG/vgg16.npy'\n",
     "\n",
-    "DATA_DIR_CONTENT = 'COCO/train2014/'\n",
-    "DATA_DIR_STYLE = 'COCO/train2014/'"
+    "DATA_DIR_CONTENT = 'data/COCO/train2014/'\n",
+    "DATA_DIR_STYLE = 'data/WikiArt/raw/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -131,11 +111,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -147,11 +125,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -160,26 +136,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "config = tf.ConfigProto()\n",
-    "config.gpu_options.allow_growth=True\n",
+    "# config.gpu_options.allow_growth=True\n",
     "sess = tf.InteractiveSession(config=config)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -196,24 +168,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "from vgg.VGG import generate_VGG16"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -233,11 +190,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -255,12 +210,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -290,32 +241,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "#### Moments for Batch Normalization\n",
-    "\n",
-    "```python\n",
-    "mean, var = tf.nn.moments(encoded_content, [0,1,2], keep_dims=True)\n",
-    "print(\"mean.shape : \", mean.shape)\n",
-    "print(\"var.shape: \", var.shape)\n",
-    "```\n",
-    "```\n",
-    "mean.shape :  (1, 1, 1, 512)\n",
-    "var.shape:  (1, 1, 1, 512)\n",
-    "```"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -334,21 +263,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Up Sampling in TensorFlow : "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -360,10 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "**Example** :\n",
     "\n",
@@ -384,11 +305,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -415,16 +334,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "with tf.name_scope(\"VGG_content_loss\"):\n",
-    "    vgg_content_loss, _ = generate_VGG16(weights_file=MODEL_WEIGHTS,\n",
+    "with tf.name_scope(\"VGG_loss\"):\n",
+    "    vgg_loss, _ = generate_VGG16(weights_file=MODEL_WEIGHTS,\n",
     "                                        scope=vgg_scope,\n",
     "                                        apply_preprocess=True,\n",
     "                                        remove_top=True,\n",
@@ -433,43 +350,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "with tf.name_scope('content_loss'):\n",
-    "    content_loss = tf.reduce_mean(tf.pow(vgg_content_loss['conv4_1'] - target, 2))"
+    "    content_loss = tf.reduce_mean(tf.pow(vgg_loss['conv4_1'] - target, 2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "with tf.name_scope(\"VGG_style_loss\"):\n",
-    "    vgg_style_loss, _ = generate_VGG16(weights_file=MODEL_WEIGHTS,\n",
-    "                                        scope=vgg_scope,\n",
-    "                                        apply_preprocess=True,\n",
-    "                                        remove_top=True,\n",
-    "                                        input_tensor=decoder['output'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -488,24 +383,22 @@
     "    style_loss = 0 \n",
     "    for layer_name, weight in STYLE_LAYERS:\n",
     "        \n",
-    "        shape = vgg_style_loss[layer_name].get_shape().as_list()\n",
+    "        shape = vgg_loss[layer_name].get_shape().as_list()\n",
     "        B = shape[0] # batch_size\n",
     "        N = shape[3] # number of feature maps\n",
     "        M = shape[1] * shape[2] # number of features per feature map\n",
     "\n",
     "        G_style = _gram_matrix_tf(style_encoder_VGG[layer_name], B, N, M) # works on Numpy array\n",
-    "        G = _gram_matrix_tf(vgg_style_loss[layer_name],B, N, M) # works on Tensor \n",
+    "        G = _gram_matrix_tf(vgg_loss[layer_name],B, N, M) # works on Tensor \n",
     "        \n",
     "        style_loss += weight * tf.reduce_mean(tf.pow(G - G_style, 2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -516,11 +409,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -530,11 +421,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -545,11 +434,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -558,60 +445,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
+     "ename": "NameError",
+     "evalue": "name 'ImageDataGenerator' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-25-a36c7c02b272>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m style_generator = ImageDataGenerator(rotation_range=20,\n\u001b[0m\u001b[1;32m      2\u001b[0m                                      \u001b[0mwidth_shift_range\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                                      \u001b[0mheight_shift_range\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                                      \u001b[0mvertical_flip\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflow_from_directory\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDATA_DIR_STYLE\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                                                          \u001b[0mtarget_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mIMG_W\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mIMG_H\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ImageDataGenerator' is not defined"
      ]
     }
    ],
    "source": [
-    "from keras.preprocessing.image import ImageDataGenerator"
+    "style_generator = WikiArtGenerator(DATA_DIR_STYLE,\n",
+    "                                   target_size=(IMG_W, IMG_H),\n",
+    "                                   batch_size=BATCH_SIZE)\n",
+    "\n",
+    "\n",
+    "content_generator = COCOGenerator((DATA_DIR_CONTENT,\n",
+    "                                   target_size=(IMG_W, IMG_H),\n",
+    "                                   batch_size=BATCH_SIZE)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "style_generator = ImageDataGenerator(rotation_range=20,\n",
-    "                                     width_shift_range=0.2,\n",
-    "                                     height_shift_range=0.2,\n",
-    "                                     vertical_flip=True).flow_from_directory(DATA_DIR_STYLE,\n",
-    "                                                         target_size=(IMG_W, IMG_H),\n",
-    "                                                         batch_size=BATCH_SIZE,\n",
-    "                                                         class_mode=None)\n",
-    "\n",
-    "\n",
-    "content_generator = ImageDataGenerator(rotation_range=20,\n",
-    "                                     width_shift_range=0.2,\n",
-    "                                     height_shift_range=0.2,\n",
-    "                                     vertical_flip=True).flow_from_directory(DATA_DIR_CONTENT,\n",
-    "                                                         target_size=(IMG_W, IMG_H),\n",
-    "                                                         batch_size=BATCH_SIZE,\n",
-    "                                                         class_mode=None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -620,6 +486,7 @@
     "ITERATIONS = 2000\n",
     "\n",
     "for it in range(ITERATIONS):\n",
+    "    \n",
     "    content = content_generator.next()\n",
     "    style = style_generator.next()\n",
     "    \n",
@@ -627,7 +494,7 @@
     "    feed[content_batch] = content\n",
     "    feed[style_batch] = style\n",
     "    \n",
-    "    if it%50 == 49 : \n",
+    "    if it == 49 : \n",
     "        run_options = tf.RunOptions(trace_level=tf.RunOptions.FULL_TRACE)\n",
     "        run_metadata = tf.RunMetadata()\n",
     "        \n",
@@ -667,7 +534,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3.0
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -682,5 +549,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
