batch generator + WikiArt dataset

--- a/2.0_Gatys_method.ipynb
+++ b/2.0_Gatys_method.ipynb
@@ -61,7 +61,7 @@
      "output_type": "stream",
      "text": [
       "TensorFlow version : 1.2.0\n",
-      "Devices : [('/cpu:0', 'CPU'), ('/gpu:0', 'GPU')]\n"
+      "Devices : [('/cpu:0', 'CPU')]\n"
      ]
     }
    ],
@@ -100,7 +100,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "if tf.gfile.Exists(LOGS):\n",
@@ -110,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -130,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
